--- a/Phoneword/Phoneword/MainPage.xaml
+++ b/Phoneword/Phoneword/MainPage.xaml
@@ -13,6 +13,6 @@
         <Entry x:Name="phoneNumberText" Text="1-855-XAMARIN" />
         <Button x:Name="translateButon" Text="Translate" Clicked="OnTranslate" />
         <Button x:Name="callButton" Text="Call" IsEnabled="false" Clicked="OnCall" />
-        <Button x:Name="changePage" Text="Change page" IsEnabled="true" Clicked="OnCall2" />
+        <Button x:Name="changePage" AutomationId="MyButton" Text="Change page" IsEnabled="true" Clicked="OnCall2" />
     </StackLayout>
 </ContentPage>
